# learn_c_programming_language

./: .gitignore  CMakeLists.txt  README.md  a.out  atomic.md  cmake.md  curses.md  define.hpp  io.c  io.h  main  main.c  position.c  position.h  snake.md  static.md  str.md  syscall.md  thread.md
array/one_dimension/: array.c  array.h
array/two_dimension/: 2d_array.c  2d_array.h
op_exp/: op_exp.c  op_exp.h
pointer/: ptr.c  ptr.h
snake/: v1.c  v1.h  v2.c  v2.h
string/: string.c  string.h
sync-share/: atomic.c  mutex.c
useless/: main.md
